--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model CartIndexViewModel
-
 <h2>Your cart</h2>
 <table class="table table-bordered table-striped">
     <thead>
@@ -21,13 +20,12 @@
                     @((line.Quantity * line.Product.Price).ToString("c"))
                 </td>
                 <td>
-                    <form asp-action="removefromcart" method="post">
+                    <form asp-action="RemoveFromCart" method="post">
                         <input type="hidden" name="ProductID"
                                value="@line.Product.ProductID" />
-                        <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
-                        <button type="submit"
-                                class="btn btn-sm btn-danger"
-                                style="cursor:pointer">
+                        <input type="hidden" name="returnUrl"
+                               value="@Model.ReturnUrl" />
+                        <button type="submit" class="btn btn-sm btn-danger">
                             Remove
                         </button>
                     </form>
@@ -44,10 +42,6 @@
         </tr>
     </tfoot>
 </table>
-
 <div class="text-center">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue shopping</a>
-    <a class="btn btn-warning" asp-action="checkout" asp-controller=order>
-        Checkout
-    </a>
 </div>
